--- a/another_attempt.ipynb
+++ b/another_attempt.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,34 +301,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9362046432498521\n"
+      "      Sex  Survived      Prob\n",
+      "0  female         0  0.090909\n",
+      "1  female         1  0.261504\n",
+      "2    male         0  0.525253\n",
+      "3    male         1  0.122334\n",
+      "male      1.087462\n",
+      "female    0.591790\n",
+      "Name: Sex, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "def attribute_entropy(col):\n",
-    "    p = col.value_counts(normalize = True)\n",
-    "    return entropy(p)\n",
-    "print(attribute_entropy(data['Sex']))"
+    "def attribute_entropy(d, col):\n",
+    "   \n",
+    "    series = col.value_counts(normalize = True)\n",
+    "    \n",
+    "    split = d.groupby([col, 'Survived'])\n",
+    "    #p = split.agg(lambda x:len(x)/len(col.index))\n",
+    "    e = pd.DataFrame({'Prob' : split.size()/len(col.index)}).reset_index()\n",
+    "    p = []\n",
+    "    \n",
+    "    print(e)\n",
+    "    p = series * entropy(e['Prob'])\n",
+    "    #for keys, vals in split:\n",
+    "        #p.append(vals/len(col.index))\n",
+    "    print(p)\n",
+    "    #return entropy(p)\n",
+    "attribute_entropy(data, data['Sex'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.2176601066606142\n"
+     "ename": "TypeError",
+     "evalue": "attribute_entropy() missing 1 required positional argument: 'col'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-282-7648956c2324>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;31m#print(ig)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mig\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplit_and_findgain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Sex'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-282-7648956c2324>\u001b[0m in \u001b[0;36msplit_and_findgain\u001b[0;34m(d, node)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0msubtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mall_entropies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattribute_entropy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubtable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;31m#print((all_entropies))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mvals\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormalize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: attribute_entropy() missing 1 required positional argument: 'col'"
      ]
     }
    ],
@@ -336,13 +360,13 @@
     "def split_and_findgain(d, node):\n",
     "    \n",
     "    subtable = d.groupby(node)\n",
-    "    all_entropies = subtable.agg(attribute_entropy)\n",
+    "    all_entropies = subtable.agg(attribute_entropy(subtable[node]))\n",
     "    #print((all_entropies))\n",
     "    vals = d[node].value_counts(normalize = True)\n",
     "    \n",
     "    wt_avg = sum(all_entropies['Survived'] * vals)\n",
     "    #print(\"Average entropy :\", wt_avg)\n",
-    "    entropy = attribute_entropy(d['Survived'])\n",
+    "    entropy = attribute_entropy(d, d['Survived'])\n",
     "    #print(\"Entropy :\", entropy)\n",
     "    ig = entropy - wt_avg\n",
     "    #print(ig)\n",
