--- a/another_attempt.ipynb
+++ b/another_attempt.ipynb
@@ -336,14 +336,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.6991817891208407, 0.8236550739295191]\n",
       "0.2176601066606142\n"
      ]
     }
@@ -360,10 +359,10 @@
     "        df = d[d[node] == val]\n",
     "        #print(df)\n",
     "        all_entropies.append(attribute_entropy(df, df[node]))\n",
-    "    print(all_entropies)\n",
-    "    wt_avg = 0\n",
-    "    for i in range(len(v)):\n",
-    "        wt_avg += v[i]*all_entropies[i]\n",
+    "    #print(all_entropies)\n",
+    "    wt_avg = sum([a*b for a,b in zip(v,all_entropies)])\n",
+    "    #for i in range(len(v)):\n",
+    "        #wt_avg += v[i]*all_entropies[i]\n",
     "    #wt_avg = sum(pd.Series(all_entropies) * pd.Series(v))\n",
     "    #print(\"Average entropy :\", wt_avg)\n",
     "    e = entropy(d['Survived'].value_counts(normalize = True))\n",
@@ -376,34 +375,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.7989470522661535, 0.9509560484549725, 0.9978683156711936]\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-330-4432e5b1e596>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuildTree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Pclass'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Age'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Fare'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Sex'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Embarked'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-330-4432e5b1e596>\u001b[0m in \u001b[0;36mbuildTree\u001b[0;34m(d, attributes, return_val)\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mnode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mattributes\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m             \u001b[0mig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplit_and_findgain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mnode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mattributes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-329-698f208c9f09>\u001b[0m in \u001b[0;36msplit_and_findgain\u001b[0;34m(d, node)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mwt_avg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mwt_avg\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mall_entropies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0;31m#wt_avg = sum(pd.Series(all_entropies) * pd.Series(v))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m#print(\"Average entropy :\", wt_avg)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1066\u001b[0m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1067\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1068\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1069\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1070\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_value\u001b[0;34m(self, series, key)\u001b[0m\n\u001b[1;32m   4728\u001b[0m         \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_convert_scalar_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"getitem\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4729\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4730\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtz\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"tz\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4731\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4732\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mholds_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_boolean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 0"
+      "{'Sex': {'female': {'Pclass': {1: {'Age': {0.0: {'Embarked': {'C': {'Fare': {2.0: '1'}}, 'S': {'Fare': {2.0: '1'}}}}, 1.0: {'Embarked': {'C': {'Fare': {1.0: '1', 2.0: '1'}}, 'Q': {'Fare': {2.0: '1'}}, 'S': {'Fare': {1.0: '1', 2.0: '1'}}}}, 2.0: {'Embarked': {'C': {'Fare': {1.0: '1', 2.0: '1'}}, 'Q': {'Fare': {2.0: '1'}}, 'S': {'Fare': {1.0: '1', 2.0: '1'}}}}}}, 2: {'Embarked': {'C': {'Age': {0.0: {'Fare': {1.0: '1', 2.0: '1'}}, 1.0: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}}}, 'Q': {'Age': {0.0: {'Fare': {0.0: '1'}}, 1.0: {'Fare': {0.0: '1'}}}}, 'S': {'Fare': {0.0: {'Age': {1.0: '1', 2.0: '1'}}, 1.0: {'Age': {0.0: '1', 1.0: '1', 2.0: '1'}}, 2.0: {'Age': {0.0: '1', 1.0: '1'}}}}}}, 3: {'Fare': {0.0: {'Age': {0.0: {'Embarked': {'C': '1', 'Q': '1', 'S': '1'}}, 1.0: {'Embarked': {'C': '1', 'Q': '1', 'S': '1'}}, 2.0: {'Embarked': {'Q': '1', 'S': '1'}}}}, 1.0: {'Embarked': {'C': {'Age': {0.0: '1', 1.0: '1'}}, 'Q': {'Age': {1.0: '1'}}, 'S': {'Age': {0.0: '1', 1.0: '1'}}}}, 2.0: {'Age': {0.0: {'Embarked': {'S': '1'}}, 1.0: {'Embarked': {'S': '1'}}}}}}}}, 'male': {'Embarked': {'C': {'Fare': {0.0: {'Age': {0.0: {'Pclass': {3: '1'}}, 1.0: {'Pclass': {2: '1', 3: '1'}}, 2.0: {'Pclass': {3: '1'}}}}, 1.0: {'Age': {0.0: {'Pclass': {1: '1', 3: '1'}}, 1.0: {'Pclass': {1: '1', 2: '1', 3: '1'}}, 2.0: {'Pclass': {1: '1'}}}}, 2.0: {'Age': {0.0: {'Pclass': {2: '1'}}, 1.0: {'Pclass': {1: '1', 2: '1'}}, 2.0: {'Pclass': {1: '1'}}}}}}, 'Q': {'Age': {0.0: {'Pclass': {3: {'Fare': {0.0: '1', 1.0: '1'}}}}, 1.0: {'Fare': {0.0: {'Pclass': {3: '1'}}, 1.0: {'Pclass': {3: '1'}}, 2.0: {'Pclass': {1: '1'}}}}, 2.0: {'Pclass': {2: {'Fare': {0.0: '1'}}, 3: {'Fare': {0.0: '1'}}}}}}, 'S': {'Age': {0.0: {'Pclass': {1: {'Fare': {2.0: '1'}}, 2: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}, 3: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}}}, 1.0: {'Pclass': {1: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}, 2: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}, 3: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}}}, 2.0: {'Pclass': {1: {'Fare': {1.0: '1', 2.0: '1'}}, 2: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}, 3: {'Fare': {0.0: '1'}}}}}}}}}}\n"
      ]
     }
    ],
@@ -423,17 +402,17 @@
     "        ig = []\n",
     "        for node in attributes:\n",
     "            ig.append(split_and_findgain(d, node))\n",
-    "        print(ig)\n",
+    "        #print(ig)\n",
     "        node = attributes[ig.index(max(ig))]\n",
-    "        print(node)\n",
+    "        #print(node)\n",
     "        tree = {node :{}}\n",
     "\n",
     "        att = attributes.copy()\n",
     "        att.remove(node)\n",
-    "        print(att)\n",
+    "        #print(att)\n",
     "        \n",
     "        for val, subtable in d.groupby(node):\n",
-    "            print(tree)\n",
+    "            #print(tree)\n",
     "            tree[node][val] = buildTree(subtable, att, return_val)\n",
     "        return tree\n",
     "\n",
