--- a/another_attempt.ipynb
+++ b/another_attempt.ipynb
@@ -375,13 +375,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'Pclass': 0.0838310452960116, 'Age': 0.011072196821102831, 'Fare': 0.06632324196798856, 'Sex': 0.2176601066606142, 'Embarked': 0.021583390635887656}\n",
+      "{'Pclass': 0.33433866977686943, 'Age': 0.013371856074800403, 'Fare': 0.07422447543827027, 'Embarked': 0.1735224604754393}\n",
+      "{'Age': 0.01809012665882412, 'Fare': 0.011856716605231354, 'Embarked': 0.007029365886374983}\n",
+      "{'Fare': 0.0, 'Embarked': 0.10218717094933333}\n",
+      "{'Fare': 0.0}\n",
+      "{'Fare': 0.0}\n",
+      "{'Fare': 0.0019166721182913293, 'Embarked': 0.02435953807285003}\n",
+      "{'Fare': 0.0}\n",
+      "{'Fare': 0.0}\n",
+      "{'Fare': 0.004791113356737514}\n",
+      "{'Fare': -0.5377099333829861, 'Embarked': 0.09948062271719046}\n",
+      "{'Fare': 0.5435644431995964}\n",
+      "{'Fare': 0.0}\n",
+      "{'Fare': 0.0}\n",
+      "{'Age': 0.27132305697295894, 'Fare': 0.1498616798276935, 'Embarked': 0.35839592724624625}\n",
+      "{'Age': 0.0, 'Fare': 0.0}\n",
+      "{'Fare': 0.0}\n",
+      "{'Fare': 0.0}\n",
+      "{'Age': 0.0, 'Fare': 0.0}\n",
+      "{'Fare': 0.0}\n",
+      "{'Fare': 0.0}\n",
+      "{'Age': -0.1330491983461542, 'Fare': 0.015101416744669083}\n",
+      "{'Age': 0.03240801670989385}\n",
+      "{'Age': 0.3299404611743595}\n",
+      "{'Age': 0.0}\n",
+      "{'Age': 0.023872055802377612, 'Fare': 0.06963266406655277, 'Embarked': 0.06810454492317208}\n",
+      "{'Age': 0.049436996427211, 'Embarked': 0.019743084745145856}\n",
+      "{'Embarked': 0.21090635081566245}\n",
+      "{'Embarked': 0.0459858441481209}\n",
+      "{'Embarked': 0.0}\n",
+      "{'Age': 0.005700384552224658, 'Embarked': 0.128628148412665}\n",
+      "{'Age': 0.0}\n",
+      "{'Age': 0.0}\n",
+      "{'Age': 0.0672448372616713}\n",
+      "{'Age': 0.0, 'Embarked': 0.0}\n",
+      "{'Embarked': 0.0}\n",
+      "{'Embarked': 0.0}\n",
+      "{'Pclass': 0.03669450739520774, 'Age': 0.02694306982928807, 'Fare': 0.03565533254532993, 'Embarked': 0.06328339623505685}\n",
+      "{'Pclass': 0.027014577164602316, 'Age': 0.005501034280591344, 'Fare': 0.03282666714113569}\n",
+      "{'Pclass': 0.0007118470982970804, 'Age': 0.012023151992413217}\n",
+      "{'Pclass': 0.0}\n",
+      "{'Pclass': 0.0013847128549449028}\n",
+      "{'Pclass': 0.0}\n",
+      "{'Pclass': 0.10926426230562147, 'Age': 0.14310852874469293}\n",
+      "{'Pclass': 0.0}\n",
+      "{'Pclass': 0.19151893940328069}\n",
+      "{'Pclass': 0.0}\n",
+      "{'Pclass': 0.0016794643057579384, 'Age': 0.061765881514410426}\n",
+      "{'Pclass': 0.0}\n",
+      "{'Pclass': 0.07614306870145238}\n",
+      "{'Pclass': 0.0}\n",
+      "{'Pclass': 0.005487809628798634, 'Age': 0.03447881386934826, 'Fare': 0.011143156327063197}\n",
+      "{'Pclass': 0.0, 'Fare': 0.0}\n",
+      "{'Fare': 0.0}\n",
+      "{'Pclass': 0.005157970760357011, 'Fare': 0.09930797730877666}\n",
+      "{'Pclass': 0.0}\n",
+      "{'Pclass': 0.0}\n",
+      "{'Pclass': 0.0}\n",
+      "{'Pclass': 0.0, 'Fare': 0.0}\n",
+      "{'Fare': 0.0}\n",
+      "{'Fare': 0.0}\n",
+      "{'Pclass': 0.0183552805396765, 'Age': 0.04712373549911941, 'Fare': 0.03368275569855217}\n",
+      "{'Pclass': 0.19275297432229643, 'Fare': 0.011376827617864627}\n",
+      "{'Fare': 0.0}\n",
+      "{'Fare': 0.1319146418983499}\n",
+      "{'Fare': 0.04748881016046835}\n",
+      "{'Pclass': 0.04810704914752095, 'Fare': 0.022644690431485204}\n",
+      "{'Fare': 0.13607873664961245}\n",
+      "{'Fare': 0.014351586352370993}\n",
+      "{'Fare': 0.028545305991889813}\n",
+      "{'Pclass': 0.06673779257599766, 'Fare': 0.04114286468598094}\n",
+      "{'Fare': 0.07185512911185765}\n",
+      "{'Fare': 0.03637309922189941}\n",
+      "{'Fare': 0.0}\n",
       "{'Sex': {'female': {'Pclass': {1: {'Age': {0.0: {'Embarked': {'C': {'Fare': {2.0: '1'}}, 'S': {'Fare': {2.0: '1'}}}}, 1.0: {'Embarked': {'C': {'Fare': {1.0: '1', 2.0: '1'}}, 'Q': {'Fare': {2.0: '1'}}, 'S': {'Fare': {1.0: '1', 2.0: '1'}}}}, 2.0: {'Embarked': {'C': {'Fare': {1.0: '1', 2.0: '1'}}, 'Q': {'Fare': {2.0: '1'}}, 'S': {'Fare': {1.0: '1', 2.0: '1'}}}}}}, 2: {'Embarked': {'C': {'Age': {0.0: {'Fare': {1.0: '1', 2.0: '1'}}, 1.0: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}}}, 'Q': {'Age': {0.0: {'Fare': {0.0: '1'}}, 1.0: {'Fare': {0.0: '1'}}}}, 'S': {'Fare': {0.0: {'Age': {1.0: '1', 2.0: '1'}}, 1.0: {'Age': {0.0: '1', 1.0: '1', 2.0: '1'}}, 2.0: {'Age': {0.0: '1', 1.0: '1'}}}}}}, 3: {'Fare': {0.0: {'Age': {0.0: {'Embarked': {'C': '1', 'Q': '1', 'S': '1'}}, 1.0: {'Embarked': {'C': '1', 'Q': '1', 'S': '1'}}, 2.0: {'Embarked': {'Q': '1', 'S': '1'}}}}, 1.0: {'Embarked': {'C': {'Age': {0.0: '1', 1.0: '1'}}, 'Q': {'Age': {1.0: '1'}}, 'S': {'Age': {0.0: '1', 1.0: '1'}}}}, 2.0: {'Age': {0.0: {'Embarked': {'S': '1'}}, 1.0: {'Embarked': {'S': '1'}}}}}}}}, 'male': {'Embarked': {'C': {'Fare': {0.0: {'Age': {0.0: {'Pclass': {3: '1'}}, 1.0: {'Pclass': {2: '1', 3: '1'}}, 2.0: {'Pclass': {3: '1'}}}}, 1.0: {'Age': {0.0: {'Pclass': {1: '1', 3: '1'}}, 1.0: {'Pclass': {1: '1', 2: '1', 3: '1'}}, 2.0: {'Pclass': {1: '1'}}}}, 2.0: {'Age': {0.0: {'Pclass': {2: '1'}}, 1.0: {'Pclass': {1: '1', 2: '1'}}, 2.0: {'Pclass': {1: '1'}}}}}}, 'Q': {'Age': {0.0: {'Pclass': {3: {'Fare': {0.0: '1', 1.0: '1'}}}}, 1.0: {'Fare': {0.0: {'Pclass': {3: '1'}}, 1.0: {'Pclass': {3: '1'}}, 2.0: {'Pclass': {1: '1'}}}}, 2.0: {'Pclass': {2: {'Fare': {0.0: '1'}}, 3: {'Fare': {0.0: '1'}}}}}}, 'S': {'Age': {0.0: {'Pclass': {1: {'Fare': {2.0: '1'}}, 2: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}, 3: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}}}, 1.0: {'Pclass': {1: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}, 2: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}, 3: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}}}, 2.0: {'Pclass': {1: {'Fare': {1.0: '1', 2.0: '1'}}, 2: {'Fare': {0.0: '1', 1.0: '1', 2.0: '1'}}, 3: {'Fare': {0.0: '1'}}}}}}}}}}\n"
      ]
     }
@@ -399,10 +473,12 @@
     "\n",
     "    else:\n",
     "        return_val = max(proportion.keys())\n",
+    "        ig1 = {}\n",
     "        ig = []\n",
     "        for node in attributes:\n",
+    "            ig1 = {**ig1, **{node : split_and_findgain(d, node)}}\n",
     "            ig.append(split_and_findgain(d, node))\n",
-    "        #print(ig)\n",
+    "        print(ig1)\n",
     "        node = attributes[ig.index(max(ig))]\n",
     "        #print(node)\n",
     "        tree = {node :{}}\n",
